force-app/main/default/objects/Plan_Acceptance__c/Plan_Acceptance__c.object-meta.xml
<CustomObject>
    <description>Tracks plan acceptance workflow including digital signatures, disputes, and resolution for compensation plan agreements.</description>
    <label>Plan Acceptance</label>
    <nameField>
        <displayFormat>PAC-{00000}</displayFormat>
        <label>Plan Acceptance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Acceptances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>