force-app/main/default/objects/Plan_Acceptance__c/fields/Acceptance_Method__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Method__c</fullName>
    <label>Acceptance Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>In_Platform_Click</fullName><default>false</default><label>In_Platform_Click</label></value>
            <value><fullName>In_Platform_Signature</fullName><default>false</default><label>In_Platform_Signature</label></value>
            <value><fullName>DocuSign</fullName><default>false</default><label>DocuSign</label></value>
            <value><fullName>AdobeSign</fullName><default>false</default><label>AdobeSign</label></value>
            <value><fullName>HelloSign</fullName><default>false</default><label>HelloSign</label></value>
            <value><fullName>Other_External</fullName><default>false</default><label>Other_External</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>