force-app/main/default/objects/Plan_Acceptance__c/fields/Acceptance_Statement__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Statement__c</fullName>
    <label>Acceptance Statement</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>