force-app/main/default/objects/Plan_Acceptance__c/fields/Accepted_On__c.field-meta.xml
<CustomField>
    <fullName>Accepted_On__c</fullName>
    <label>Accepted On</label>
    <type>DateTime</type>
</CustomField>