force-app/main/default/objects/Plan_Acceptance__c/fields/Acceptor_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Acceptor_Geolocation__c</fullName>
    <label>Acceptor Geolocation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>