force-app/main/default/objects/Plan_Acceptance__c/fields/Acceptor_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Acceptor_IP_Address__c</fullName>
    <label>Acceptor IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>