force-app/main/default/objects/Plan_Acceptance__c/fields/Acceptor_User_Agent__c.field-meta.xml
<CustomField>
    <fullName>Acceptor_User_Agent__c</fullName>
    <label>Acceptor User Agent</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>