force-app/main/default/objects/Plan_Acceptance__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Plan Acceptances</relationshipLabel>
    <relationshipName>Plan_Acceptances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>