force-app/main/default/objects/Plan_Acceptance__c/fields/Dispute_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Resolution__c</fullName>
    <label>Dispute Resolution</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>