force-app/main/default/objects/Plan_Acceptance__c/fields/Dispute_Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Dispute Resolutions</relationshipLabel>
    <relationshipName>Dispute_Resolutions</relationshipName>
    <type>Lookup</type>
</CustomField>