force-app/main/default/objects/Plan_Acceptance__c/fields/Dispute_Resolved_On__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Resolved_On__c</fullName>
    <label>Dispute Resolved On</label>
    <type>DateTime</type>
</CustomField>