force-app/main/default/objects/Plan_Acceptance__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <label>Expires On</label>
    <type>DateTime</type>
</CustomField>