force-app/main/default/objects/Plan_Acceptance__c/fields/External_Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Envelope_Id__c</fullName>
    <label>External Envelope Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>