force-app/main/default/objects/Plan_Acceptance__c/fields/External_Provider__c.field-meta.xml
<CustomField>
    <fullName>External_Provider__c</fullName>
    <label>External Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DocuSign</fullName><default>false</default><label>DocuSign</label></value>
            <value><fullName>AdobeSign</fullName><default>false</default><label>AdobeSign</label></value>
            <value><fullName>HelloSign</fullName><default>false</default><label>HelloSign</label></value>
            <value><fullName>PandaDoc</fullName><default>false</default><label>PandaDoc</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>