force-app/main/default/objects/Plan_Acceptance__c/fields/External_Signed_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Signed_Document_URL__c</fullName>
    <label>External Signed Document URL</label>
    <type>Url</type>
</CustomField>