force-app/main/default/objects/Plan_Acceptance__c/fields/External_Signing_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Signing_URL__c</fullName>
    <label>External Signing URL</label>
    <type>Url</type>
</CustomField>