force-app/main/default/objects/Plan_Acceptance__c/fields/First_Viewed_On__c.field-meta.xml
<CustomField>
    <fullName>First_Viewed_On__c</fullName>
    <label>First Viewed On</label>
    <type>DateTime</type>
</CustomField>