force-app/main/default/objects/Plan_Acceptance__c/fields/Last_Reminder_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_On__c</fullName>
    <label>Last Reminder On</label>
    <type>DateTime</type>
</CustomField>