force-app/main/default/objects/Plan_Acceptance__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Plan Acceptances</relationshipLabel>
    <relationshipName>Plan_Acceptances_User</relationshipName>
    <type>Lookup</type>
</CustomField>