force-app/main/default/objects/Plan_Acceptance__c/fields/Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Count__c</fullName>
    <label>Reminder Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>