force-app/main/default/objects/Plan_Acceptance__c/fields/Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_On__c</fullName>
    <label>Sent On</label>
    <type>DateTime</type>
</CustomField>