force-app/main/default/objects/Plan_Acceptance__c/fields/Signature_Data__c.field-meta.xml
<CustomField>
    <fullName>Signature_Data__c</fullName>
    <label>Signature Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>